# vibe-tts

./: .gitignore  LICENSE  README.md  README_RIVA_SETUP.md  main.py  pyproject.toml  test_audio_playback.py  test_kokoro_connection.py  test_kokoro_voices.py  test_riva_connection.py  tts_app.py
