[project]
name = "vibe-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kokoro>=0.9.4",
    "soundfile>=0.12.1",
    "torch==2.7.1",
    "numpy>=2.1.0",
    "pyqt6>=6.9.1",
    "scipy>=1.16.0",
    "misaki[en]>=0.9.4",
    "pip>=25.1.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
